; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netsmb/extr_smb_rq.c_smb_t2_placedata.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netsmb/extr_smb_rq.c_smb_t2_placedata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { i32 }
%struct.mdchain = type { i32* }

@M_WAITOK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mbuf*, i32, i32, %struct.mdchain*)* @smb_t2_placedata to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smb_t2_placedata(%struct.mbuf* %0, i32 %1, i32 %2, %struct.mdchain* %3) #0 {
  %5 = alloca %struct.mbuf*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.mdchain*, align 8
  %9 = alloca %struct.mbuf*, align 8
  %10 = alloca %struct.mbuf*, align 8
  %11 = alloca i32, align 4
  store %struct.mbuf* %0, %struct.mbuf** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.mdchain* %3, %struct.mdchain** %8, align 8
  %12 = load %struct.mbuf*, %struct.mbuf** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* @M_WAITOK, align 4
  %15 = call %struct.mbuf* @m_split(%struct.mbuf* %12, i32 %13, i32 %14)
  store %struct.mbuf* %15, %struct.mbuf** %10, align 8
  %16 = load %struct.mbuf*, %struct.mbuf** %10, align 8
  %17 = call i32 @m_length(%struct.mbuf* %16, %struct.mbuf** %9)
  store i32 %17, i32* %11, align 4
  %18 = load i32, i32* %11, align 4
  %19 = load i32, i32* %7, align 4
  %20 = sub nsw i32 %18, %19
  %21 = load %struct.mbuf*, %struct.mbuf** %9, align 8
  %22 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = sub nsw i32 %23, %20
  store i32 %24, i32* %22, align 4
  %25 = load %struct.mdchain*, %struct.mdchain** %8, align 8
  %26 = getelementptr inbounds %struct.mdchain, %struct.mdchain* %25, i32 0, i32 0
  %27 = load i32*, i32** %26, align 8
  %28 = icmp eq i32* %27, null
  br i1 %28, label %29, label %33

29:                                               ; preds = %4
  %30 = load %struct.mdchain*, %struct.mdchain** %8, align 8
  %31 = load %struct.mbuf*, %struct.mbuf** %10, align 8
  %32 = call i32 @md_initm(%struct.mdchain* %30, %struct.mbuf* %31)
  br label %39

33:                                               ; preds = %4
  %34 = load %struct.mdchain*, %struct.mdchain** %8, align 8
  %35 = getelementptr inbounds %struct.mdchain, %struct.mdchain* %34, i32 0, i32 0
  %36 = load i32*, i32** %35, align 8
  %37 = load %struct.mbuf*, %struct.mbuf** %10, align 8
  %38 = call i32 @m_cat(i32* %36, %struct.mbuf* %37)
  br label %39

39:                                               ; preds = %33, %29
  ret i32 0
}

declare dso_local %struct.mbuf* @m_split(%struct.mbuf*, i32, i32) #1

declare dso_local i32 @m_length(%struct.mbuf*, %struct.mbuf**) #1

declare dso_local i32 @md_initm(%struct.mdchain*, %struct.mbuf*) #1

declare dso_local i32 @m_cat(i32*, %struct.mbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
